--- a/Violapp/app/src/main/res/values/colors.xml
+++ b/Violapp/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="color_primary_dark">#B7B7B7</color>
     <color name="gray">#6B6B6B</color>
     <color name="gray_transparent">#506B6B6B</color>
+    <color name="black_transparent">#80000000</color>
     <color name="orange">#FF9912</color>
+    <color name="red">#FF0000</color>
 
 </resources>
