--- a/Violapp/app/src/main/res/layout/fragment_choose_tempo_term.xml
+++ b/Violapp/app/src/main/res/layout/fragment_choose_tempo_term.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layoutAnimation="@anim/layout_animation"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/tempo_term_item" />
 
