pop animation for recycler view

--- a/Violapp/app/src/main/res/navigation/nav_graph.xml
+++ b/Violapp/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,6 @@
         android:id="@+id/metronomeFragment"
         android:name="com.ntikhoa.violapp.MetronomeFragment"
         android:label="fragment_metronome"
-        tools:layout="@layout/fragment_metronome" />
+        tools:layout="@layout/fragment_metronome" >
+    </fragment>
 </navigation>
