--- a/Violapp/app/src/main/res/layout/fragment_metronome_controller.xml
+++ b/Violapp/app/src/main/res/layout/fragment_metronome_controller.xml
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatToggleButton
-        android:id="@+id/appCompatToggleButton"
+        android:id="@+id/btn_play"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@drawable/toggle_button_play"
@@ -76,11 +76,12 @@
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/appCompatToggleButton"
+        app:layout_constraintEnd_toStartOf="@+id/btn_play"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seperator_view" />
 
     <TextView
+        android:id="@+id/text_view_time_signature"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:gravity="center"
@@ -91,7 +92,7 @@
         app:backgroundTint="@color/gray_transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/appCompatToggleButton"
+        app:layout_constraintStart_toEndOf="@+id/btn_play"
         app:layout_constraintTop_toBottomOf="@+id/seperator_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
