add tick animation; tick 6 and 9 fragment; fragment tick factory

--- a/Violapp/app/src/main/res/layout/include_button_tick_small.xml
+++ b/Violapp/app/src/main/res/layout/include_button_tick_small.xml
@@ -5,6 +5,7 @@
 
     <androidx.appcompat.widget.AppCompatToggleButton
         android:id="@+id/btn_tick"
+        android:alpha="0.7"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/toggle_button_tick"
