--- a/Violapp/app/src/main/res/anim/slide_in_to_left.xml
+++ b/Violapp/app/src/main/res/anim/slide_in_to_left.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <translate
+        android:fromXDelta="100%"
+        android:toXDelta="0%"
+        android:duration="500"/>
+
     <alpha
-        android:duration="300"
+        android:duration="500"
         android:fromAlpha="0"
         android:toAlpha="1" />
-
-    <translate
-        android:duration="300"
-        android:fromYDelta="-200%"
-        android:toYDelta="0%" />
 
 </set>
