--- a/Violapp/app/src/main/res/anim/slide_in_to_left.xml
+++ b/Violapp/app/src/main/res/anim/slide_in_to_left.xml
@@ -2,9 +2,9 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <translate
+        android:duration="500"
         android:fromXDelta="100%"
-        android:toXDelta="0%"
-        android:duration="500"/>
+        android:toXDelta="0%" />
 
     <alpha
         android:duration="500"
