--- a/Violapp/app/src/main/res/layout/fragment_choose_tempo_term.xml
+++ b/Violapp/app/src/main/res/layout/fragment_choose_tempo_term.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_transparent"
-    tools:context=".ChooseTempoTermFragment">
+    tools:context=".ui.ChooseTempoTermFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -14,6 +14,6 @@
         android:layoutAnimation="@anim/layout_animation"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/tempo_term_item" />
+        tools:listitem="@layout/item_tempo_term" />
 
 </FrameLayout>
