--- a/Violapp/app/src/main/res/layout/fragment_metronome.xml
+++ b/Violapp/app/src/main/res/layout/fragment_metronome.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/fragment_tempo_term"
     android:background="@color/black"
-    tools:context=".MetronomeFragment">
+    tools:context=".ui.MetronomeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,6 +34,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatToggleButton
+                android:id="@+id/btnMute"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="15dp"
