--- a/Violapp/app/src/main/res/layout/fragment_3_tick.xml
+++ b/Violapp/app/src/main/res/layout/fragment_3_tick.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".ui.TickFragment">
+    tools:context=".ui.metronome.TickFragment">
 
     <include
         android:id="@+id/btn1"
