--- a/Violapp/app/src/main/res/layout/fragment_choose_tempo_term.xml
+++ b/Violapp/app/src/main/res/layout/fragment_choose_tempo_term.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_transparent"
-    tools:context=".ui.ChooseTempoTermFragment">
+    tools:context=".ui.metronome.ChooseTempoTermFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
