--- a/Violapp/app/src/main/res/layout/fragment_choose_time_signature.xml
+++ b/Violapp/app/src/main/res/layout/fragment_choose_time_signature.xml
@@ -7,7 +7,7 @@
     android:background="@color/black_transparent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".ui.ChooseTimeSignatureFragment">
+    tools:context=".ui.metronome.ChooseTimeSignatureFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
