change background and color

--- a/Violapp/app/src/main/res/drawable/toggle_button_tick.xml
+++ b/Violapp/app/src/main/res/drawable/toggle_button_tick.xml
@@ -13,7 +13,7 @@
 
         <shape android:shape="oval">
 
-            <solid android:color="@color/orange" />
+            <solid android:color="@color/teal" />
         </shape>
     </item>
 
