--- a/Violapp/app/src/main/res/layout/include_metronome_controller.xml
+++ b/Violapp/app/src/main/res/layout/include_metronome_controller.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fragment_container_time_signature"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_background">
+    android:background="@drawable/metronome_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/default_tempo_60"
-                android:textColor="@color/orange"
+                android:textColor="@color/teal"
                 android:textSize="64sp" />
 
             <TextView
@@ -88,7 +88,7 @@
             android:id="@+id/seperator_view"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/orange"
+            android:background="@color/teal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +115,7 @@
             android:gravity="center"
             android:text="@string/default_tempo_term"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/orange"
+            android:textColor="@color/teal"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_play"
@@ -128,7 +128,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/default_time_signature"
-            android:textColor="@color/orange"
+            android:textColor="@color/teal"
             android:textSize="48sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
