--- a/Violapp/app/src/main/res/layout/fragment_sample_sound.xml
+++ b/Violapp/app/src/main/res/layout/fragment_sample_sound.xml
@@ -13,11 +13,25 @@
         android:layout_weight="3"
         android:orientation="vertical">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:src="@drawable/str1_btn0" />
+
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:gravity="center"
             android:text="First Position"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Scale: All notes"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     </LinearLayout>
