--- a/Violapp/app/src/main/res/layout/fragment_sample_sound.xml
+++ b/Violapp/app/src/main/res/layout/fragment_sample_sound.xml
@@ -14,9 +14,18 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/image_note"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:src="@drawable/str1_btn0" />
+
+        <TextView
+            android:id="@+id/text_view_note"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            tools:text="G" />
 
         <TextView
             android:layout_width="match_parent"
