--- a/Violapp/app/src/main/res/layout/fragment_sample_sound.xml
+++ b/Violapp/app/src/main/res/layout/fragment_sample_sound.xml
@@ -36,6 +36,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
+            android:id="@+id/text_view_scale"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
