--- a/Violapp/app/src/main/res/layout/fragment_choose_scale.xml
+++ b/Violapp/app/src/main/res/layout/fragment_choose_scale.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black_transparent"
     tools:context=".ui.sample_sound.ChooseScaleFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_scale"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layoutAnimation="@anim/layout_animation"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2" />
 
