--- a/Violapp/app/src/main/res/layout/fragment_choose_tempo_term.xml
+++ b/Violapp/app/src/main/res/layout/fragment_choose_tempo_term.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black_transparent"
+    android:background="@color/black_trans90"
     tools:context=".ui.metronome.ChooseTempoTermFragment">
 
     <androidx.recyclerview.widget.RecyclerView
