--- a/Violapp/app/src/main/res/layout/fragment_choose_time_signature.xml
+++ b/Violapp/app/src/main/res/layout/fragment_choose_time_signature.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black_transparent"
+    android:background="@color/black_trans90"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".ui.metronome.ChooseTimeSignatureFragment">
