--- a/Violapp/app/src/main/res/drawable/btn_note_square.xml
+++ b/Violapp/app/src/main/res/drawable/btn_note_square.xml
@@ -3,12 +3,12 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <solid android:color="@color/white_transparent" />
-            <size android:width="@android:dimen/notification_large_icon_height" android:height="@android:dimen/notification_large_icon_height" />
+            <size android:width="@dimen/_45sdp" android:height="@dimen/_45sdp" />
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <size android:width="@android:dimen/notification_large_icon_height" android:height="@android:dimen/notification_large_icon_height" />
+            <size android:width="@dimen/_45sdp" android:height="@dimen/_45sdp" />
             <solid android:color="@color/teal_transparent" />
         </shape>
     </item>
